[gd_scene load_steps=7 format=2]

[ext_resource path="res://AudioSettings.gd" type="Script" id=1]
[ext_resource path="res://feedback/ButtonJuice.gd" type="Script" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://PatrickHand-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="AudioSettings" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 240.0
margin_top = 186.0
margin_right = 815.0
margin_bottom = 396.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 568.0
margin_bottom = 203.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 509.0
margin_bottom = 196.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 458.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Master Volume:"

[node name="masterVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 378.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -40.0
max_value = 1.0
tick_count = 10

[node name="masterMute" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 382.0
margin_right = 458.0
margin_bottom = 40.0
pressed = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 458.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Music Volume:"

[node name="musicVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 178.0
margin_right = 378.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -40.0
max_value = 1.0
tick_count = 10

[node name="musicMute" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 382.0
margin_right = 458.0
margin_bottom = 40.0
pressed = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 458.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "FX Volume:"

[node name="fxVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 178.0
margin_right = 378.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -40.0
max_value = 1.0
tick_count = 10

[node name="fxMute" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 382.0
margin_right = 458.0
margin_bottom = 40.0
pressed = true

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 458.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Speedup/Spacebar Volume:"

[node name="spacebarVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 178.0
margin_right = 378.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -40.0
max_value = 1.0
tick_count = 10

[node name="spacebarMute" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 382.0
margin_right = 458.0
margin_bottom = 40.0
pressed = true

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 458.0
margin_bottom = 196.0
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_left = 204.0
margin_right = 254.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Ok"
script = ExtResource( 2 )

[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/masterVolumeSlider" to="." method="_on_masterVolumeSlider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/masterMute" to="." method="_on_masterMute_mouse_entered"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/masterMute" to="." method="_on_masterMute_toggled"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/musicVolumeSlider" to="." method="_on_musicVolumeSlider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/musicMute" to="." method="_on_musicMute_mouse_entered"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/musicMute" to="." method="_on_musicMute_toggled"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3/fxVolumeSlider" to="." method="_on_fxVolumeSlider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3/fxMute" to="." method="_on_fxMute_mouse_entered"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3/fxMute" to="." method="_on_fxMute_toggled"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4/spacebarVolumeSlider" to="." method="_on_spacebarVolumeSlider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4/spacebarMute" to="." method="_on_spacebarMute_mouse_entered"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer4/spacebarMute" to="." method="_on_spacebarMute_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer5/Button" to="." method="_on_Button_pressed"]
